Rewrite to using filesystem's path, removing session and blob
