# src/main/java/de/lind3/CloudLite/upload/CreateSessionRequest.java
@@ -1,10 +1,6 @@
 package de.lind3.CloudLite.upload;
 
-import java.util.UUID;
-
 /**
  * Request body for creating a new upload session.
- *
- * @param targetFolderId destination folder where files will be published on commit
  */
-public record CreateSessionRequest(UUID targetFolderId) {}
+public record CreateSessionRequest() {}
